fix: changed font size on mobile

--- a/src/style/style_main.css
+++ b/src/style/style_main.css
@@ -168,7 +168,7 @@ body::before {
 
 .mobile_message_text {
     font-family: 'Poppins', sans-serif;
-    font-size: 0.5em;
+    font-size: 0.3em;
     font-weight: bolder;
     color: #d8d6ce;
     text-align: center;
